--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^7.1.2",
         "axios": "^0.19.2",
         "node-sass": "^4.13.1",
+        "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router": "^5.1.2",
