--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-flip-move": "^3.0.4",
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.1"
