--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "no-shadow": 0,
     "import/no-unresolved": 0,
     "no-unused-vars": 1,
+    "no-nested-ternary": 0,
 
     // React Rules
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
